'添加说明文档，编写路由相关代码'

--- a/zcblog-front2client/src/common/stylus/base.styl
+++ b/zcblog-front2client/src/common/stylus/base.styl
@@ -9,7 +9,7 @@ body, html, pre
 // 清除浮动
 .clearfix
   display: inline-block
-  &::after
+  &:after
     display: block
     content: "."
     height: 0
@@ -20,11 +20,11 @@ body, html, pre
 // 移动端设置
 @media (-webkit-min-device-pixel-ratio: 1.5), (min-device-pixel-ratio: 1.5)
   .border-1px
-    &::after
+    &:after
       -webkit-transform: scaleY(0.7)
       transform: scaleY(0.7)
 @media (-webkit-min-device-pixel-ratio: 2), (min-device-pixel-ratio: 2)
   .border-1px
-    &::after
+    &:after
       -webkit-transform: scaleY(0.5)
       transform: scaleY(0.5)
