--- a/zcblog-front2client/src/common/stylus/font.styl
+++ b/zcblog-front2client/src/common/stylus/font.styl
@@ -56,3 +56,18 @@
   src: url('../fonts/font/inconsolata/Inconsolata.otf')
   font-weight: normal
   font-style: normal
+
+//引入字体图标
+@font-face
+  font-family: 'iconfont'
+  src: url('~common/fonts/font-icon/iconfont.eot')
+  src: url('~common/fonts/font-icon/iconfont.eot?#iefix') format('embedded-opentype'),
+       url('~common/fonts/font-icon/iconfont.woff2') format('woff2'),
+       url('~common/fonts/font-icon/iconfont.woff') format('woff'),
+       url('~common/fonts/font-icon/iconfont.ttf') format('truetype'),
+       url('~common/fonts/font-icon/iconfont.svg#iconfont') format('svg')
+.iconfont
+  font-family: "iconfont" !important
+  font-style: normal
+  -webkit-font-smoothing: antialiased
+  -moz-osx-font-smoothing: grayscale
