--- a/zcblog-front2client/src/common/stylus/theme.styl
+++ b/zcblog-front2client/src/common/stylus/theme.styl
@@ -8,14 +8,14 @@ $body-font = "Josefin Sans", "Helvetica Neue", arial, sans-serif
 $code-font = "Inconsolata", "Helvetica Neue", monaco, courier, monospace
 
 // font sizes
-$body-font-size = 15px
+$body-font-size = 16px
 $code-font-size = .8em
 // =================================  font end ======================================
 
 // =================================  color start ===================================
 // normal colors
 $color-page-background = #F4F6F7
-$color-content-background = #FFFFFF
+$color-content-background = #ffffff
 $color-nav = #ff5f5f
 $color-on-hover = #6DB33F
 $color-timeline-calendar = #6DB33F
