'完成国际化配置和网络请求封装'

--- a/zcblog-front2client/src/common/stylus/font.styl
+++ b/zcblog-front2client/src/common/stylus/font.styl
@@ -1,59 +1,59 @@
 //引入"Josefin Sans"字体
 @font-face
   font-family: 'Josefin Sans'
-  src: url('../fonts/font/JosefinSans/JosefinSans-Bold-2.ttf')
+  src: url('~common/fonts/font/JosefinSans/JosefinSans-Bold-2.ttf')
   font-weight: bold, 700
   font-style: normal
 @font-face
   font-family: 'Josefin Sans'
-  src: url('../fonts/font/JosefinSans/JosefinSans-BoldItalic-3.ttf')
+  src: url('~common/fonts/font/JosefinSans/JosefinSans-BoldItalic-3.ttf')
   font-weight: bold, 700
   font-style: italic, oblique
 @font-face
   font-family: 'Josefin Sans'
-  src: url('../fonts/font/JosefinSans/JosefinSans-Italic-4.ttf')
+  src: url('~common/fonts/font/JosefinSans/JosefinSans-Italic-4.ttf')
   font-weight: normal, 400
   font-style: italic, oblique
 @font-face
   font-family: 'Josefin Sans'
-  src: url('../fonts/font/JosefinSans/JosefinSans-Light-5.ttf')
+  src: url('~common/fonts/font/JosefinSans/JosefinSans-Light-5.ttf')
   font-weight: 200
   font-style: normal
 @font-face
   font-family: 'Josefin Sans'
-  src: url('../fonts/font/JosefinSans/JosefinSans-LightItalic-6.ttf')
+  src: url('~common/fonts/font/JosefinSans/JosefinSans-LightItalic-6.ttf')
   font-weight: 200
   font-style: italic, oblique
 @font-face
   font-family: 'Josefin Sans'
-  src: url('../fonts/font/JosefinSans/JosefinSans-Regular-7.ttf')
+  src: url('~common/fonts/font/JosefinSans/JosefinSans-Regular-7.ttf')
   font-weight: normal, 400
   font-style: normal
 @font-face
   font-family: 'Josefin Sans'
-  src: url('../fonts/font/JosefinSans/JosefinSans-SemiBold-8.ttf')
+  src: url('~common/fonts/font/JosefinSans/JosefinSans-SemiBold-8.ttf')
   font-weight: 600
   font-style: normal
 @font-face
   font-family: 'Josefin Sans'
-  src: url('../fonts/font/JosefinSans/JosefinSans-SemiBoldItalic-9.ttf')
+  src: url('~common/fonts/font/JosefinSans/JosefinSans-SemiBoldItalic-9.ttf')
   font-weight: 600
   font-style: italic, oblique
 @font-face
   font-family: 'Josefin Sans'
-  src: url('../fonts/font/JosefinSans/JosefinSans-Thin-10.ttf')
+  src: url('~common/fonts/font/JosefinSans/JosefinSans-Thin-10.ttf')
   font-weight: 100
   font-style: nomal
 @font-face
   font-family: 'Josefin Sans'
-  src: url('../fonts/font/JosefinSans/JosefinSans-ThinItalic-11.ttf')
+  src: url('~common/fonts/font/JosefinSans/JosefinSans-ThinItalic-11.ttf')
   font-weight: 100
   font-style: italic, oblique
 
 //引入inconsolata.otf字体
 @font-face
   font-family: inconsolata
-  src: url('../fonts/font/inconsolata/Inconsolata.otf')
+  src: url('~common/fonts/font/inconsolata/Inconsolata.otf')
   font-weight: normal
   font-style: normal
 
