'完善导航栏绘制'

--- a/zcblog-front2client/src/common/stylus/theme.styl
+++ b/zcblog-front2client/src/common/stylus/theme.styl
@@ -4,7 +4,7 @@
 
 // =================================  font start ===================================
 // font faces
-$body-font = "Josefin Sans", "Helvetica Neue", arial, sans-serif
+$body-font = "Josefin Sans", inconsolata, "Helvetica Neue", "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", arial, sans-serif
 $code-font = "Inconsolata", "Helvetica Neue", monaco, courier, monospace
 
 // font sizes
@@ -17,7 +17,7 @@ $code-font-size = .8em
 $color-page-background = #F4F6F7
 $color-content-background = #ffffff
 $color-nav = #ff5f5f
-$color-on-hover = #6DB33F
+$color-on-hover = #6db33f
 $color-timeline-calendar = #6DB33F
 $color-timeline-checked = #FF9966
 $color-timeline-unchecked = #BBBBBB
@@ -27,8 +27,8 @@ $color-scroll-progress-ground = #4D4646
 $color-tag-label = #99CA79
 
 //font colors
-$color-font-blog-name- = #363636
-$color-font-blog-desc = #5E5E5E
+$color-font-blog-name = #2d8cf0
+$color-font-blog-desc = #5e5e5e
 $color-font-module-name = $color-blog-desc
 $color-font-content = #111111
 
@@ -40,8 +40,8 @@ $color-secondary-error = #ed4014
 $color-secondary-info = #2db7f5
 
 // box border related
-$color-border = #eeeeee
-$color-border-hover = #dddddd
+$color-border = #dddddd
+$color-border-hover = $color-on-hover
 
 // gradually changing color
 $color-gradually-gray-11 = #1C1C1C
