'完成时间轴的制作'

--- a/zcblog-front2client/src/common/stylus/base.styl
+++ b/zcblog-front2client/src/common/stylus/base.styl
@@ -6,6 +6,10 @@ body, html, pre
   font-weight: 200
   font-family: "Josefin Sans", Inconsolata, "Helvetica Neue", "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial, sans-serif
 
+a
+  text-decoration none
+  color #000000
+
 // 清除浮动
 .clearfix
   display: inline-block
