--- a/zcblog-front2client/src/common/stylus/theme.styl
+++ b/zcblog-front2client/src/common/stylus/theme.styl
@@ -57,14 +57,12 @@ $color-gradually-gray-101 = #f9f9f9
 // =================================  color end ===================================
 
 // =================================  size start ===================================
-//$border-radius = 4px
-//$content-padding-top = 30px
-//$header-inner-height = 41px
-//$heading-padding-vertical = 10px
-//$header-height = $header-inner-height + $heading-padding-vertical * 2
-//$mobile-header-height = 40px
-//$heading-link-padding-top = $header-height + $content-padding-top
-//$mobile-heading-link-padding-top = $mobile-header-height + $content-padding-top
-//$h2-margin-top = 45px
-//$h3-margin-top = 52px
+$size-xxl = 1600px
+$size-xl = 1200px
+$size-lg = 992px
+$size-md = 768px
+$size-sm = 576px
+
+$header-height-pageContent = 35px
+$footer-height-pageContent =35px
 // =================================  size end ===================================
