'完善博客系统前台'

--- a/zcblog-front2client/src/common/stylus/font.styl
+++ b/zcblog-front2client/src/common/stylus/font.styl
@@ -53,7 +53,8 @@
 //引入inconsolata.otf字体
 @font-face
   font-family: inconsolata
-  src: url('~common/fonts/font/inconsolata/Inconsolata.otf')
+  src: url('~common/fonts/font/inconsolata/Inconsolata.eot'),
+       url('~common/fonts/font/inconsolata/Inconsolata.otf')
   font-weight: normal
   font-style: normal
 
