--- a/zcblog-front2client/src/common/stylus/theme.styl
+++ b/zcblog-front2client/src/common/stylus/theme.styl
@@ -18,6 +18,8 @@ $color-page-background = #F4F6F7
 $color-content-background = #ffffff
 $color-nav = #ff5f5f
 $color-on-hover = #6db33f
+$color-header-mobile = #15A2CB
+$color-footer-mobile = #263136
 $color-timeline-calendar = #6DB33F
 $color-timeline-checked = #FF9966
 $color-timeline-unchecked = #BBBBBB
@@ -63,6 +65,6 @@ $size-lg = 992px
 $size-md = 768px
 $size-sm = 576px
 
-$header-height-pageContent = 20px
-$footer-height-pageContent =20px
+$header-height-pageContent = 30px
+$footer-height-pageContent =30px
 // =================================  size end ===================================
