'完成文章模块样式，优化响应式布局Bug'

--- a/zcblog-front2client/src/common/stylus/theme.styl
+++ b/zcblog-front2client/src/common/stylus/theme.styl
@@ -33,6 +33,7 @@ $color-font-blog-name = #2d8cf0
 $color-font-blog-desc = #5e5e5e
 $color-font-module-name = $color-blog-desc
 $color-font-content = #111111
+$color-article-font = #4C4948
 
 // iview ui theme color
 $color-main-primary = #2d8cf0
