'完善axios请求api与代码的分离'

--- a/zcblog-front2manage/src/common/scss/base.scss
+++ b/zcblog-front2manage/src/common/scss/base.scss
@@ -136,8 +136,8 @@ img {
         color: #fff;
         &:focus,
         &:hover {
-          color: #fff;
-          background-color: mix(#000, $navbar--background-color, 15%);
+          color: #ffffff;
+          background-color: mix(#000000, $navbar--background-color, 15%);
         }
       }
       > .el-menu-item.is-active,
