--- a/zcblog-front2manage/src/common/scss/index.scss
+++ b/zcblog-front2manage/src/common/scss/index.scss
@@ -1,3 +1,3 @@
-@import "src/assets/css/normalize.css";
-@import "theme";
-@import "base";
+@import '~assets/css/normalize.css';
+@import 'theme';
+@import 'base';
