'完成角色模块'

--- a/zcblog-front2manage/src/common/scss/index.scss
+++ b/zcblog-front2manage/src/common/scss/index.scss
@@ -1,8 +1,7 @@
-// 初始化
-@import '~assets/css/normalize.css';
+@import "~assets/css/normalize.css";
 // 变量
-@import 'theme';
+@import "./theme.scss";
 // 基础样式
-@import 'base';
+@import "./base.scss";
 // 样式
-@import "style";
+@import "./style.scss";
