--- a/zcblog-front2manage/src/common/scss/theme.scss
+++ b/zcblog-front2manage/src/common/scss/theme.scss
@@ -5,6 +5,7 @@ $--color-primary: #17b3a3;
 
 // Navbar
 $navbar--background-color: $--color-primary;
+$navbar--background-color-inverse: #263238;
 
 // Sidebar
 $sidebar--background-color-dark: #263238;
